--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'MullerRegular';
   src: url('../fonts/MullerRegular.eot');
-  src: local('☺'), url('../fonts/MullerRegular.woff') format('woff'), url('../fonts/MullerRegular.ttf') format('truetype'), url('../fonts/MullerRegular.svg') format('svg');
+  src: local('☺'), url('../fonts/MullerRegular.woff') format('woff'), url('../fonts/MullerRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -9,7 +9,7 @@
 @font-face {
   font-family: 'MullerBold';
   src: url('../fonts/MullerBold.eot');
-  src: local('☺'), url('../fonts/MullerBold.woff') format('woff'), url('../fonts/MullerBold.ttf') format('truetype'), url('../fonts/MullerBold.svg') format('svg');
+  src: local('☺'), url('../fonts/MullerBold.woff') format('woff'), url('../fonts/MullerBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @font-face {
   font-family: 'MullerMedium';
   src: url('../fonts/MullerMedium.eot');
-  src: local('☺'), url('../fonts/MullerMedium.woff') format('woff'), url('../fonts/MullerMedium.ttf') format('truetype'), url('../fonts/MullerMedium.svg') format('svg');
+  src: local('☺'), url('../fonts/MullerMedium.woff') format('woff'), url('../fonts/MullerMedium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,7 +25,7 @@
 @font-face {
   font-family: 'MullerLight';
   src: url('../fonts/MullerLight.eot');
-  src: local('☺'), url('../fonts/MullerLight.woff') format('woff'), url('../fonts/MullerLight.ttf') format('truetype'), url('../fonts/MullerLight.svg') format('svg');
+  src: local('☺'), url('../fonts/MullerLight.woff') format('woff'), url('../fonts/MullerLight.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
