--- a/scss/_top-block.scss
+++ b/scss/_top-block.scss
@@ -63,15 +63,43 @@
   font-family: $MullerRegular;
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: 100px;
+  margin-bottom: 90px;
 }
 
 .btn-requst {
   padding: 20px 70px;
   border: 2px solid #fff;
   color: #fff;
+  letter-spacing: 1px;
   background: transparent;
   font-family: $MullerBold;
   font-size: 18px;
   text-transform: uppercase;
+  margin-bottom: 145px;
+}
+
+.btn-requst:hover {
+  background: #db883c;
+  border: 2px solid #db883c;
+}
+
+.social {
+  display: flex;
+}
+
+.social-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 26px;
+  height: 26px;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  background: transparent;
+  margin: 0 5px;
+}
+
+.social-item:hover {
+  background: #db883c;
+  border: 1px solid #db883c;
 }
