--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -4,7 +4,8 @@
 }
 
 body {
-  //max-width: 1920px;
-  //margin: 0 auto;
-  background-color: #f8f2e4;
+  width: 1920px;
+  margin: 0 auto;
+  background-color: #ffffff;
 }
+
