Завершена верстка третьего блока

--- a/scss/_block-2.scss
+++ b/scss/_block-2.scss
@@ -2,11 +2,9 @@
 
 .block-2 {
   display: flex;
-  justify-content: flex-start;;
+  justify-content: center;
   align-items: center;
   background-color: #f8f2e4;
-  width: 860px;
-  margin: 0 auto;
   padding: 50px 0;
 }
 
