--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,9 @@ body {
 
 .block-2 {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   background-color: #f8f2e4;
-  width: 860px;
-  margin: 0 auto;
   padding: 50px 0;
 }
 
@@ -194,6 +192,46 @@ body {
   font-family: "MullerLight", sans-serif;
   font-size: 18px;
   text-transform: uppercase;
+}
+
+.block-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-bl3 {
+  font-family: "MullerMedium", sans-serif;
+  font-size: 36px;
+  margin-top: 80px;
+  margin-bottom: 17px;
+}
+
+.cards-h {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 70px;
+  margin-bottom: 32px;
+}
+
+.card-h {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: 27%;
+  height: 225px;
+  text-align: center;
+  font-family: "MullerRegular", sans-serif;
+  font-size: 16px;
+  margin-bottom: 45px;
+}
+
+.card-h p {
+  width: 250px;
 }
 
 /*# sourceMappingURL=style.css.map */
