Завершена верстка четвертого блока, и большей части пятого блока

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .block-1 {
-  background: url(../image/three-womens-1block.png) no-repeat;
+  background: url(../images/three-womens-1block.png) no-repeat;
   width: 1920px;
   height: 829px;
   margin: 0 auto;
@@ -232,6 +232,117 @@ body {
 
 .card-h p {
   width: 250px;
+}
+
+.block-4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #f8f2e4;
+  height: 487px;
+}
+
+.slider {
+  margin-top: 82px;
+}
+
+.block-4 .title-bl4 {
+  font-family: "MullerMedium", sans-serif;
+  font-size: 36px;
+  margin-top: 80px;
+  margin-bottom: 17px;
+}
+
+.cont {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 940px;
+  margin: 0 auto;
+}
+
+.cont .box {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ffff;
+  width: 880px;
+  height: 470px;
+  color: #fff;
+  background-color: rgba(67, 53, 53, 0.4);
+  z-index: 777;
+}
+
+.cont .box .title-slide {
+  font-family: "MullerMedium", sans-serif;
+  font-size: 26px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+
+.cont .box p {
+  font-family: "MullerRegular", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  width: 470px;
+  text-align: center;
+}
+
+.block-5 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 300px;
+}
+
+.title-bl5 {
+  font-family: "MullerMedium", sans-serif;
+  font-size: 36px;
+  margin-top: 80px;
+  margin-bottom: 17px;
+}
+
+.cards-tour {
+  margin-top: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 940px;
+  margin: 0 auto;
+}
+
+.card-tour {
+  margin-top: 40px;
+  width: 220px;
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8f2e4;
+}
+
+.btn-requst-sm {
+  padding: 15px 30px;
+  border: 2px solid #db883c;
+  color: #db883c;
+  letter-spacing: 1px;
+  background: transparent;
+  font-family: "MullerBold", sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.btn-requst-sm:hover {
+  background: #db883c;
+  border: 2px solid #db883c;
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=style.css.map */
