--- a/css/style.css
+++ b/css/style.css
@@ -474,4 +474,151 @@ body {
   margin-left: 40px;
 }
 
+.overlay-bl8 {
+  width: 725px;
+  height: 260px;
+  margin-left: 460px;
+  position: absolute;
+  background-color: #f8f2e4;
+  z-index: 0;
+}
+
+.block-8 {
+  width: 940px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0 auto;
+  margin-top: 30px;
+  position: relative;
+}
+
+.gallery-bl8 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-row: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.image-bl8 {
+  width: 140px;
+  height: 140px;
+}
+
+.title-bl8 {
+  font-family: "MullerMedium", sans-serif;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.sub-title-bl8 {
+  font-family: "MullerLight", sans-serif;
+  font-size: 14px;
+  margin-bottom: 35px;
+}
+
+.right-bl8 {
+  margin: 25px 0 80px 50px;
+}
+
+.info-bl8 {
+  margin-bottom: 40px;
+}
+
+.inf-block-8 p {
+  font-family: "MullerLight", sans-serif;
+  font-size: 18px;
+}
+
+.info-bl8 p, .item-list p {
+  text-align: left;
+  font-family: "MullerLight", sans-serif;
+  font-size: 12px;
+}
+
+.item-list p {
+  width: 185px;
+  margin: 0 15px;
+}
+
+.item-list {
+  display: flex;
+  justify-content: flex-start;
+  margin: 7px 0;
+}
+
+.list-bl8 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 460px;
+  height: 260px;
+}
+
+.icon-bl8 {
+  width: 13px;
+  height: 13px;
+}
+
+.block-9 {
+  width: 940px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  position: relative;
+}
+
+.overlay-bl9 {
+  height: 1140px;
+  position: absolute;
+  background-color: #f8f2e4;
+  z-index: 0;
+}
+
+.image-bl9 {
+  width: 940px;
+  height: 540px;
+  margin: 10px 0;
+}
+
+.zig {
+  margin-bottom: 60px;
+}
+
+.title-bl9 {
+  margin-top: 80px;
+  margin-bottom: 17px;
+  font-family: "MullerMedium", sans-serif;
+  font-size: 36px;
+}
+
+.instructor {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.instructor .instr-box {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 940px;
+  height: 170px;
+  color: #fff;
+  background-color: rgba(67, 53, 53, 0.4);
+  z-index: 777;
+  margin-bottom: 10px;
+}
+
+.name-instr {
+  font-family: "MullerMedium", sans-serif;
+  font-size: 30px;
+  margin: 40px 0 0 60px;
+}
+
 /*# sourceMappingURL=style.css.map */
