Завершена верстка девятого блока

--- a/scss/_block-9.scss
+++ b/scss/_block-9.scss
@@ -1,5 +1,13 @@
 @import "variables";
 
+.overlay-bl9 {
+  height: 1140px;
+  width: 1920px;
+  position: absolute;
+  background-color: #f8f2e4;
+  z-index: 0;
+}
+
 .block-9 {
   width: 940px;
   display: flex;
@@ -10,25 +18,19 @@
   position: relative;
 }
 
-.overlay-bl9 {
-  height: 1140px;
-  position: absolute;
-  background-color: #f8f2e4;
-  z-index: 0;
-}
+
 
 .image-bl9 {
   width: 940px;
   height: 540px;
-  margin: 10px 0;
 }
 
 .zig {
-  margin-bottom: 60px;
+  margin-bottom: 70px;
 }
 
 .title-bl9 {
-  margin-top: 80px;
+  margin-top: 70px;
   margin-bottom: 17px;
   font-family: $MullerMedium;
   font-size: 36px;
@@ -37,28 +39,54 @@
 .instructor {
   position: relative;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: flex-end;
-  //width: 940px;
-  //margin: 0 auto;
+  margin-bottom: 20px;
 }
 
-.instructor .instr-box {
+.instructor .instr-box  {
   position: absolute;
   display: flex;
-  flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   width: 940px;
   height: 170px;
   color:#fff;
   background-color: rgba(67,53,53, 0.4);
   z-index: 777;
-  margin-bottom: 10px;
 }
 
 .name-instr {
   font-family: $MullerMedium;
   font-size: 30px;
-  margin: 40px 0 0 60px;
+  margin: 0 0 0 60px;
+  width: 280px;
+  z-index: 777;
+  margin-right: 10px;
+}
+
+.name-instr .sis {
+  font-family: $MullerRegularItalic;
+  font-size: 16px;
+  line-height: 1.2;
+  display: block;
+  margin-top: 18px;
+}
+
+
+.instructor p {
+  font-family: $MullerRegular;
+  font-size: 14px;
+  width: 460px;
+  z-index: 777;
+  color: #ffffff;
+}
+
+.separator {
+  width: 2px;
+  height: 80px;
+  border: 1px solid #ffffff;
+  background-color: #ffffff;
+  margin-right: 50px;
+  z-index: 777;
 }
