--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,8 @@
 // Шрифты
 $MullerLight: 'MullerLight', sans-serif;
 $MullerRegular: 'MullerRegular', sans-serif;
+$MullerRegularItalic: 'MullerRegularItalic', sans-serif;
 $MullerMedium: 'MullerMedium', sans-serif;
 $MullerBold: 'MullerBold', sans-serif;
+
 
