--- a/css/style.css
+++ b/css/style.css
@@ -567,19 +567,19 @@ body {
 }
 
 .overlay-bl9 {
-  height: 1140px;
   width: 1920px;
+  height: 1140px;
   position: absolute;
   background-color: #f8f2e4;
   z-index: 0;
 }
 
 .block-9 {
-  width: 940px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 940px;
   margin: 0 auto;
   position: relative;
 }
@@ -594,27 +594,28 @@ body {
 }
 
 .title-bl9 {
-  margin-top: 70px;
-  margin-bottom: 17px;
   font-family: "MullerMedium", sans-serif;
   font-size: 36px;
+  margin: 70px 0 17px 0;
 }
 
 .instructor {
-  position: relative;
   display: flex;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: flex-end;
+  position: relative;
   margin-bottom: 20px;
 }
 
 .instructor .instr-box {
-  position: absolute;
   display: flex;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 940px;
   height: 170px;
+  position: absolute;
   color: #fff;
   background-color: rgba(67, 53, 53, 0.4);
   z-index: 777;
@@ -623,10 +624,9 @@ body {
 .name-instr {
   font-family: "MullerMedium", sans-serif;
   font-size: 30px;
-  margin: 0 0 0 60px;
+  margin: 0 10px 0 60px;
   width: 280px;
   z-index: 777;
-  margin-right: 10px;
 }
 
 .name-instr .sis {
