--- a/css/style.css
+++ b/css/style.css
@@ -654,4 +654,71 @@ body {
   z-index: 777;
 }
 
+.block-10 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.title-bl10 {
+  font-family: "MullerMedium", sans-serif;
+  font-size: 30px;
+  margin: 60px 0 10px 0;
+}
+
+.slider {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-testimonial {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 940px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.image-bl10 {
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  width: 150px !important;
+}
+
+.info-testimonial {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-family: "MullerRegularItalic", sans-serif;
+  font-size: 14px;
+  width: 560px;
+  margin: 0 0 0 40px;
+}
+
+.info-testimonial a {
+  font-family: "MullerLight", sans-serif;
+  font-size: 12px;
+  color: #c94410;
+  margin: 0 0 20px 0;
+}
+
+.title-testimonial {
+  font-family: "MullerRegular", sans-serif;
+  font-size: 18px;
+  margin: 0 0 6px 0;
+}
+
+.title-testimonial .bold-title {
+  font-family: "MullerBold", sans-serif;
+  font-size: 18px;
+}
+
 /*# sourceMappingURL=style.css.map */
